# dora-hub

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HACKATHON_NOTES.md  Makefile  README.md  RELEASE.md  _typos.toml  ruff.toml
.github/PULL_REQUEST_TEMPLATE/: publish-node.md
.github/workflows/: ci.yml  index-auto-merge.yml  node-hub-ci-cd.yml  node-index-audit.yml  node-index-ci.yml  node_hub_test.sh
benches/speech-to-speech/: benchmark_script.py  funasr-qwen3-kokoro.yaml
examples/api_examples/vlm_gemeni_api_example/camera_node/: README.md  pyproject.toml
examples/api_examples/vlm_gemeni_api_example/camera_node/camera_node/: main.py
examples/api_examples/vlm_gemeni_api_example/camera_node/tests/: test_camera_node.py
examples/camera/: dataflow_rerun.yml
examples/cxx-python-polyglot/: README.md  dataflow.yml
examples/echo/: README.md  dataflow.yml
examples/keyboard/: dataflow.yml
examples/lerobot-dataset/: dataset_record.yml  dataset_record_avif.yml
examples/map-anything/: glb_server.py  map-anything-realsense.yml
examples/mcp-host/: dataflow.yml
examples/openai-realtime/: README.md  funasr-metal.yml  qwen2-5-omni.yml  qwen3.yml  whisper-1-template-metal-rename.yml  whisper-1-template-metal.yml  whisper-template-metal.yml
examples/openai-server/: dataflow.yml
examples/openarm/: demo_up_forward.py  demo_vertical_lift.py  openarm-collision-plan.yml  openarm-demo.yml  openarm-ik.yml  test_fk.py  test_ik.py  test_trajectory.py  trajectory_player.py
examples/openarm-grasp/: QUICKSTART.md  README.md  SMOKE_TEST.md  grasp_planner.py  grasp_selector.py  grasp_trajectory.py  grasp_trigger.py  openarm-config.json  openarm-grasp-motion.yml  openarm-grasp.yml  pick-and-place-baguette.yml  pick-and-place-chat.yml  pick-and-place.yml  standalone_grasp_test.py  test-grasp-motion.yml  test-motion-only.yml  test_static_image_sender.py  test_visualize_grasp.py  test_vlm_critic_sam3.yml  test_vlm_critic_sam3_static.yml  white_handle_grasp.py
examples/parquet-recorder/: README.md  camera.py  dataflow.yml  decode_images.py
examples/piper/: dummy_inference.py  dummy_inference_2.py  post_process_action.py  record.py  replay.py
examples/python-operator-dataflow/: llm_op.py
examples/reachy2-remote/: parse_point.py  parse_pose.py
examples/record-replay/: README.md  dataflow-record.yml  dataflow-replay.yml
examples/so100/: bus.py
examples/so100-remote/: parse_pose.py  parse_whisper.py
examples/so101/: arm_gamepad_control.yml  leader_follower.yml
examples/speech-to-text/: README.md
examples/teleop-xr/: README.md  so101_ik_demo.yml
examples/translation/: dataflow_en_fr.yml  dataflow_en_zh_terminal.yml  dataflow_zh_en.yml  dataflow_zh_en_terminal.yml  phi4-dev.yml  pretty_print.py
examples/urdf/: broken_fanuc.yml  broken_poppy.yml  franka.yml  gen3.yml  kuka.yml  piper.yml  so_arm101.yml  ur5.yml  z1.yml
examples/vlm/: README.md  qwen3-vl-a3b-test.yml  qwen3_vl_formatter.py
index-ci/: Cargo.toml  reserved_namespaces.txt
index-ci/src/: append_only.rs  catalog.rs  decide.rs  git.rs  identity.rs  integrity.rs  lib.rs  main.rs  model.rs  namespace.rs  reachability.rs  validate.rs
index-ci/tests/: audit-e2e.rs  integration.rs
node-archive/dora-argotranslate/: pyproject.toml
node-archive/dora-opus/: pyproject.toml
node-archive/dora-parler/: pyproject.toml
node-archive/dora-phi4/: pyproject.toml
node-archive/dora-qwenvl/: README.md  pyproject.toml
node-hub/data-switch/: Cargo.toml  README.md
node-hub/data-switch/src/: main.rs
node-hub/dora-map-anything/: pyproject.toml
node-hub/dora-map-anything/dora_map_anything/: __init__.py  __main__.py  main.py
node-hub/dora-moq-image/: Cargo.toml
node-hub/dora-moq-image/src/: main.rs
node-hub/dora-motion-planner/: pyproject.toml
node-hub/dora-motion-planner/dora_motion_planner/: __init__.py  analyze_screw.py  analyze_trajectory.py  collision_model.py  compiled_fk.py  grasp_utils.py  main.py  pointcloud.py  trajectory_json.py  trajectory_optimizer.py
node-hub/dora-motion-planner/tests/: benchmark_ik_solvers.py  capture_realsense_fixture.py  test_collision_model.py  test_compiled_fk.py  test_grasp_pipeline.py  test_grasp_utils.py  test_mps_compat.py  test_pointcloud.py  test_real_collision.py  test_trajectory_optimizer.py  viz_trajectory.py
node-hub/dora-motion-planner/tests/fixtures/: realsense_frame.npz
node-hub/dora-nexus/: Cargo.toml
node-hub/dora-nexus/src/: main.rs  urdf.rs
node-hub/dora-onnx/: README.md  pyproject.toml
node-hub/dora-onnx/dora_onnx/: main.py
node-hub/dora-onnx/tests/: test_onnx.py
node-hub/dora-openarm/: pyproject.toml
node-hub/dora-openarm-playback/: Cargo.toml
node-hub/dora-openarm-playback/src/: main.rs
node-hub/dora-openarm/dora_openarm/: __init__.py  __main__.py  main.py
node-hub/dora-parquet-recorder/: README.md  dora-node.yml  pyproject.toml
node-hub/dora-parquet-recorder/dora_parquet_recorder/: main.py
node-hub/dora-parquet-recorder/tests/: test_recorder.py
node-hub/dora-qwen3/: README.md  pyproject.toml
node-hub/dora-qwen3/dora_qwen3/: main.py
node-hub/dora-qwen3/tests/: test_dora_qwen3.py
node-hub/dora-recorder/: Cargo.toml  README.md  dora-node.yml
node-hub/dora-recorder/src/: main.rs
node-hub/dora-sam3/: README.md  pyproject.toml
node-hub/dora-sam3/dora_sam3/: __init__.py  __main__.py  main.py
node-hub/dora-teleop-xr/: README.md  dora-node.yml  pyproject.toml
node-hub/dora-teleop-xr/dora_teleop_xr/: __init__.py  __main__.py  main.py
node-hub/dora-teleop-xr/tests/: __init__.py  test_dora_teleop_xr.py
node-hub/dora-tflite/: README.md  pyproject.toml
node-hub/dora-tflite/dora_tflite/: main.py
node-hub/dora-tflite/tests/: test_tflite_node.py
node-hub/dora-xoq-can/: Cargo.toml
node-hub/dora-xoq-can/src/: lib.rs  main.rs
node-hub/dora-xoq-chat/: pyproject.toml
node-hub/dora-xoq-chat/dora_xoq_chat/: main.py
node-index/: BOOTSTRAP.md  POLICY.md  README.md
schemas/: node-index-entry.schema.json  node-index-package.schema.json
scripts/: test-node.sh
tests/llm/: magma.yaml  (+1 more)
(+404 files in other folders)
