[workspace]

[package]
name = "dora-nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
kiss3d = "0.40"
urdf-rs = "0.9"
stl_io = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
xoq = { version = "0.3.6", features = ["realsense-remote", "dav1d"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
# Pin moq-native to 0.12.0 — 0.12.2 pulls moq-lite 0.13 which breaks xoq 0.3.6.
moq-native = { version = "=0.12.0", features = ["ring"], default-features = false }

[[bin]]
name = "dora-nexus"
path = "src/main.rs"
