[workspace]

[package]
name = "dora-openarm-playback"
version = "0.1.0"
edition = "2021"

[dependencies]
dora-node-api = { version = "0.4.1", features = ["tracing"] }
xoq = { path = "../../../wser", features = ["can-remote"] }
anyhow = "1"
eyre = "0.6.8"
tracing = "0.1"
serde_json = "1"
chrono = "0.4"

# Pin moq crates to versions compatible with xoq
moq-native = { version = "=0.12.0", default-features = false }
moq-transport = "=0.12.0"
