[project]
name = "dora-sam3"
version = "0.1.0"
authors = [{ name = "Your Name", email = "email@email.com" }]
description = "dora-sam3 — text-prompted segmentation with Meta SAM 3"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "dora-rs >= 0.3.9",
  "huggingface-hub>=0.29.0",
  "opencv-python>=4.11.0.86",
  # sam3 must be installed separately as editable from the git repo:
  #   pip install -e /path/to/sam3
  # PyPI version (0.1.2) is missing BPE assets.
]

[dependency-groups]
dev = ["pytest >=8.1.1", "ruff >=0.9.1"]

[project.scripts]
dora-sam3 = "dora_sam3.main:main"

[tool.ruff.lint]
extend-select = [
  "D",    # pydocstyle
  "UP",   # Ruff's UP rule
  "PERF", # Ruff's PERF rule
  "RET",  # Ruff's RET rule
  "RSE",  # Ruff's RSE rule
  "NPY",  # Ruff's NPY rule
  "N",    # Ruff's N rule
  "I",    # Ruff's I rule
]
