[project]
name = "dora-tflite"
version = "0.0.1"
authors = [
  { name = "Hari L", email = "harilogesh2019@gmail.com" },
]
description = "Dora Node for edge inference using TensorFlow Lite for constrained devices"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "dora-rs >= 0.4.0",
  "numpy>=1.24.4",
]

[project.optional-dependencies]
tflite = ["tflite-runtime >= 2.14.0"]

[dependency-groups]
dev = ["pytest >=8.1.1", "ruff >=0.9.1"]

[project.scripts]
dora-tflite = "dora_tflite.main:main"
